--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,9 +31,11 @@
     "@types/node": "^20.11.6",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
+    "@vanilla-extract/css": "^1.12.0",
     "eslint": "^8.56.0",
     "eslint-plugin-qwik": "^1.4.5",
     "prettier": "^3.2.4",
+    "styled-vanilla-extract": "^0.5.4",
     "typescript": "5.3.3",
     "undici": "*",
     "vite": "^5.0.12",
