--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,7 @@
     "vite-tsconfig-paths": "^4.2.1"
   },
   "dependencies": {
+    "@modular-forms/qwik": "^0.23.1",
     "valibot": "^0.29.0"
   }
 }
